<resources>
    <string name="app_name">Rummy 500 Scorepad</string>
    <string name="welcome">Welcome to your Rummy 500 Scorepad!</string>
    <string name="two_players">2 Players</string>
    <string name="three_players">3 Players</string>
    <string name="four_players">4 Players</string>
    <string name="prompt_player_names">What are the names of the players?</string>
    <string name="next">Next</string>
    <string name="player_A">Player A</string>
    <string name="player_B">Player B</string>
    <string name="player_C">Player C</string>
    <string name="player_D">Player D</string>

    <!-- Buttons -->
    <string name="subtract_five">-5</string>
    <string name="add_five">+5</string>
    <string name="add_ten">+10</string>
    <string name="add_fifteen">+15</string>
    <string name="reset">Reset</string>
    <string name="end_round">End Round</string>

    <string name="round_text">Round</string>
    <string name="starting_score">0</string>
    <string name="enter_two_names">Enter 2 Player Names</string>
    <string name="enter_three_names">Enter 3 Player Names</string>
    <string name="enter_four_names">Enter 4 Player Names</string>
    <string name="game_two_players">2 Player Game</string>
    <string name="game_three_players">3 Player Game</string>
    <string name="game_four_players">4 Player Game</string>

    <!-- Background image description -->
    <string name="green_background_description">Green felt background</string>
</resources>
