<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Enter4PlayersNames">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/greenfelt"
        android:scaleType="fitXY" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_player_names"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
        <EditText
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_A"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" />
        <EditText
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_B"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>
        <EditText
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_C"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>
        <EditText
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_D"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"/>
    </LinearLayout>
</RelativeLayout>