<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/greenfelt" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/round_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:textSize="28sp"
                android:text="@string/round_title"/>

            <RelativeLayout
                android:id="@+id/playerAStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/player_A"
                    android:id="@+id/playerATitle"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal"
                    android:layout_below="@id/playerATitle">

                    <TextView
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/starting_score"
                        android:textSize="32sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:id="@+id/player_a_score" />
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/darkRed"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/subtract_five"
                        android:onClick="subtractFiveFromPlayerA"
                        android:layout_weight="2" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_five"
                        android:onClick="addFiveForPlayerA"
                        android:layout_weight="2"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_ten"
                        android:onClick="addTenForPlayerA"
                        android:layout_weight="2"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_fifteen"
                        android:onClick="addFifteenForPlayerA"
                        android:layout_weight="2"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/playerBStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/player_B"
                    android:id="@+id/playerBTitle"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal"
                    android:layout_below="@id/playerBTitle">

                    <TextView
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/starting_score"
                        android:textSize="32sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:id="@+id/player_b_score" />
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/darkRed"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/subtract_five"
                        android:onClick="subtractFiveFromPlayerB"
                        android:layout_weight="2" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_five"
                        android:onClick="addFiveForPlayerB"
                        android:layout_weight="2"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_ten"
                        android:onClick="addTenForPlayerB"
                        android:layout_weight="2"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_fifteen"
                        android:onClick="addFifteenForPlayerB"
                        android:layout_weight="2"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/end_round"
            android:gravity="center"
            android:onClick="addRound"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/reset"
            android:gravity="center"
            android:onClick="reset"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"/>
    </RelativeLayout>
</ScrollView>