<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/greenbackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/round_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:text="@string/round_text"
            android:layout_marginTop="16dp"/>

        <RelativeLayout
            android:id="@+id/playerAStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:text="@string/player_A"
                android:id="@+id/playerATitle"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:layout_below="@id/playerATitle">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/starting_score"
                    android:textSize="32sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/player_a_score" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/darkRed"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subtract_five"
                    android:onClick="subtractFiveFromPlayerA"
                    android:layout_weight="2" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_five"
                    android:onClick="addFiveForPlayerA"
                    android:layout_weight="2"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ten"
                    android:onClick="addTenForPlayerA"
                    android:layout_weight="2"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_fifteen"
                    android:onClick="addFifteenForPlayerA"
                    android:layout_weight="2"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/playerBStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:text="@string/player_B"
                android:id="@+id/playerBTitle"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:layout_below="@id/playerBTitle">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/starting_score"
                    android:textSize="32sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/player_b_score" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/darkRed"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subtract_five"
                    android:onClick="subtractFiveFromPlayerB"
                    android:layout_weight="2" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_five"
                    android:onClick="addFiveForPlayerB"
                    android:layout_weight="2"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ten"
                    android:onClick="addTenForPlayerB"
                    android:layout_weight="2"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_fifteen"
                    android:onClick="addFifteenForPlayerB"
                    android:layout_weight="2"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/playerCStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:text="@string/player_C"
                android:id="@+id/playerCTitle"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/playerCTitle">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/starting_score"
                    android:textSize="32sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/player_c_score" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/darkRed"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subtract_five"
                    android:onClick="subtractFiveFromPlayerC"
                    android:layout_weight="2" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_five"
                    android:onClick="addFiveForPlayerC"
                    android:layout_weight="2"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ten"
                    android:onClick="addTenForPlayerC"
                    android:layout_weight="2"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_fifteen"
                    android:onClick="addFifteenForPlayerC"
                    android:layout_weight="2"/>
            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/round_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/end_round"
            android:layout_gravity="center"
            android:onClick="addRound"
            android:layout_marginBottom="24dp"/>
        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/reset"
            android:layout_gravity="center"
            android:onClick="reset"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>
</ScrollView>