<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:text="@string/player_A"
                android:id="@+id/playerATitle"
                android:textSize="24sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:layout_below="@id/playerATitle">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/starting_score"
                    android:textSize="32sp"
                    android:id="@+id/player_a_score" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_five"
                    android:onClick="addFiveForPlayerA"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ten"
                    android:onClick="addTenForPlayerA"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_fifteen"
                    android:onClick="addFifteenForPlayerA"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:text="@string/player_B"
                android:id="@+id/playerBTitle"
                android:textSize="24sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:layout_below="@id/playerBTitle">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/starting_score"
                    android:textSize="32sp"
                    android:id="@+id/player_b_score" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_five"
                    android:onClick="addFiveForPlayerB"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ten"
                    android:onClick="addTenForPlayerB"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_fifteen"
                    android:onClick="addFifteenForPlayerB"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:text="@string/player_C"
                android:id="@+id/playerCTitle"
                android:textSize="24sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/playerCTitle">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/starting_score"
                    android:textSize="32sp"
                    android:id="@+id/player_c_score" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_five"
                    android:onClick="addFiveForPlayerC"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ten"
                    android:onClick="addTenForPlayerC"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_fifteen"
                    android:onClick="addFifteenForPlayerC"/>
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_gravity="center_horizontal"
            android:onClick="reset"
            android:layout_marginBottom="12dp"/>
    </LinearLayout>
</ScrollView>